dist/kubernetes/broker-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /home/simone/Desktop/kompose/kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: broker
  name: broker
spec:
  ports:
  - name: "29092"
    port: 29092
    targetPort: 29092
  - name: "9092"
    port: 9092
    targetPort: 9092
  selector:
    io.kompose.service: broker
  type: LoadBalancer
status:
  loadBalancer: {}
