dist/kubernetes/job-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /home/simone/Desktop/kompose/kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: job-cluster
  name: job-cluster
spec:
  ports:
  - name: "8081"
    port: 8081
    targetPort: 8081
  selector:
    io.kompose.service: job-cluster
  type: LoadBalancer
status:
  loadBalancer: {}
